<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.DetailsActivity">

    <ImageView
        android:id="@+id/image_view_restaurant_detail_activity"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_details_activity" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_description_detail_activity"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_restaurant_detail_activity">

        <TextView
            android:id="@+id/text_view_name_detail_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_view_favorite_detail_activity"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:src="@android:drawable/btn_star_big_on"
            app:layout_constraintStart_toEndOf="@+id/text_view_name_detail_activity"
            app:layout_constraintTop_toTopOf="@+id/text_view_name_detail_activity" />

        <TextView
            android:id="@+id/text_view_address_detail_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/text_view_name_detail_activity"
            app:layout_constraintTop_toBottomOf="@+id/text_view_name_detail_activity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/image_button_participation_detail_activity"
        style="@style/Widget.Material3.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/constraint_layout_description_detail_activity"
        app:layout_constraintEnd_toEndOf="@+id/constraint_layout_description_detail_activity"
        app:layout_constraintTop_toBottomOf="@+id/image_view_restaurant_detail_activity" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_data_detail_activity"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_description_detail_activity"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image_view_call_detail_activity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_call_detail_activity"
            android:text="@string/call_detail_restaurant"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/image_view_call_detail_activity"
            app:layout_constraintStart_toStartOf="@+id/image_view_call_detail_activity"
            app:layout_constraintTop_toBottomOf="@+id/image_view_call_detail_activity" />

        <ImageView
            android:id="@+id/image_view_like_detail_activity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/image_view_website_detail_activity"
            app:layout_constraintStart_toEndOf="@+id/image_view_call_detail_activity"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_like_detail_activity"
            android:text="@string/like_detail_restaurant"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/image_view_like_detail_activity"
            app:layout_constraintStart_toStartOf="@+id/image_view_like_detail_activity"
            app:layout_constraintTop_toBottomOf="@+id/image_view_like_detail_activity" />

        <ImageView
            android:id="@+id/image_view_website_detail_activity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_website_detail_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/website_detail_restaurant"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/image_view_website_detail_activity"
            app:layout_constraintStart_toStartOf="@+id/image_view_website_detail_activity"
            app:layout_constraintTop_toBottomOf="@+id/image_view_website_detail_activity" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_users_detail_activity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_data_detail_activity" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_details_activity"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>